--- a/assets/styles.css
+++ b/assets/styles.css
@@ -18,7 +18,7 @@ body {
 }
 @font-face {
     font-family: "Press Start 2P";
-    src: url("assets/PressStart2P-Regular.ttf") format('truetype');
+    src: url("PressStart2P-Regular.ttf") format('truetype');
 }
 nav {
     position: absolute;
