--- a/assets/gallery.css
+++ b/assets/gallery.css
@@ -4,7 +4,7 @@ html {
 }
 @font-face {
     font-family: "Press Start 2P";
-    src: url("assets/PressStart2P-Regular.ttf") format('truetype');
+    src: url("PressStart2P-Regular.ttf") format('truetype');
 }
 nav {
     position: absolute;
